@@ -16,7 +16,8 @@ static char *InfoHelp[] = {
     "OPERATORS",
     "    info   Dataset information listed by parameter identifier",
     "           Prints information and simple statistics for each field of all",
-    "           input datasets. For each field the operator prints one line with the following elements:",
+    "           input datasets. For each field the operator prints one line with ",
+    "           the following elements:",
     "           - Date and Time",
     "           - Parameter identifier and Level",
     "           - Size of the grid and number of Missing values",
@@ -47,7 +48,8 @@ static char *SinfoHelp[] = {
     "OPERATORS",
     "    sinfo   Short information listed by parameter identifier",
     "            Prints short information of a dataset. The information is divided into",
-    "            4 sections. Section 1 prints one line per parameter with the following information:",
+    "            4 sections. Section 1 prints one line per parameter with the following ",
+    "            information:",
     "            - institute and source",
     "            - parameter identifier",
     "            - horizontal grid size and number",
@@ -62,7 +64,7 @@ static char *SinfoHelp[] = {
 
 static char *DiffHelp[] = {
     "NAME",
-    "    diff, diffv - Compare two datasets field by field",
+    "    diff, diffn - Compare two datasets field by field",
     "",
     "SYNOPSIS",
     "    <operator>  ifile1 ifile2",
@@ -73,19 +75,19 @@ static char *DiffHelp[] = {
     "    the same header information and dimensions.",
     "",
     "OPERATORS",
-    "    diff   Compare two datasets listed by code number",
+    "    diff   Compare two datasets listed by parameter id",
     "           Provides statistics on differences between two datasets.",
     "           For each pair of fields the operator prints one line with the following information:",
     "           - Date and Time",
-    "           - Code number and Level",
+    "           - Parameter identifier and Level",
     "           - Size of the grid and number of Missing values",
     "           - Occurrence of coefficient pairs with different signs (S)",
     "           - Occurrence of zero values (Z)",
     "           - Maxima of absolute difference of coefficient pairs",
     "           - Maxima of relative difference of non-zero coefficient pairs with equal signs",
-    "    diffv  Compare two datasets listed by variable name",
-    "           The same as operator diff. Using the name instead of the code number",
-    "           to identify the variable.",
+    "    diffn  Compare two datasets listed by parameter name",
+    "           The same as operator diff. Using the name instead of the",
+    "           identifier to label the parameter.",
     NULL
 };
 
