@@ -8,9 +8,10 @@ Version 1.5.0 (?? March 2011):
      * Added support for netCDF level bounds
      * Added option -O to overwrite existing output file (only for ens<STAT>, merge, mergetime)
    Changed operators:
-     * sinfov: renamed to sinfon
-     * sinfo: changed output of table and code number to parameter idenifier
      * expr: added functions abs(), int(), nint(), sqr()
+     * sinfo: changed output of table and code number to parameter idenifier
+     * info:  changed output of code number to parameter idenifier
+     * diff:  changed output of code number to parameter idenifier
    Fixed bugs:
      * sellonlatbox: does not work as expected when selecting all longitutes
      * sellonlatbox: initialization missing for unstructured grids
