@@ -5,8 +5,9 @@
 
 2011-03-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
-	* info:  changed output of table and code number to parameter idenifier
 	* sinfo: changed output of table and code number to parameter idenifier
+	* info:  changed output of code number to parameter idenifier
+	* diff:  changed output of code number to parameter idenifier
 	
 2011-03-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
 
